--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
-  "dependencies": {
-    "@babel/cli": "^7.24.8",
-    "@babel/core": "^7.25.2",
-    "@babel/preset-react": "^7.24.7"
-  }
+	"scripts": {
+    "build":"webpack"
+	},
+	"dependencies": {
+		"@babel/cli": "^7.24.8",
+		"@babel/core": "^7.25.2",
+		"@babel/preset-react": "^7.24.7"
+	},
+	"devDependencies": {
+		"babel-loader": "^9.1.3",
+		"webpack": "^5.93.0",
+		"webpack-cli": "^5.1.4"
+	}
 }
