--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"scripts": {
-    "build":"webpack"
+		"build": "webpack"
 	},
 	"dependencies": {
 		"@babel/cli": "^7.24.8",
@@ -9,6 +9,7 @@
 	},
 	"devDependencies": {
 		"babel-loader": "^9.1.3",
+		"html-webpack-plugin": "^5.6.0",
 		"webpack": "^5.93.0",
 		"webpack-cli": "^5.1.4"
 	}
