--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"scripts": {
+		"start": "cross-env NODE_ENV=dev webpack server",
 		"build": "webpack"
 	},
 	"dependencies": {
@@ -9,8 +10,12 @@
 	},
 	"devDependencies": {
 		"babel-loader": "^9.1.3",
+		"clean-webpack-plugin": "^4.0.0",
+		"cross-env": "^7.0.3",
+		"dotenv-webpack": "^8.1.0",
 		"html-webpack-plugin": "^5.6.0",
 		"webpack": "^5.93.0",
-		"webpack-cli": "^5.1.4"
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.4"
 	}
 }
